<resources>
    <string name="app_name">My Application</string>
    <string name="model_download">model Download</string>
    <string name="download_in_progress">Download in progress</string>
    <string name="unset_shared_preference">UNSET_SHARED_PREFERENCE</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="title_activity_translation_main">TranslationMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="text_translation">Text translation</string>
    <string name="translate_from">Tanslate from : </string>
    <string name="enter_text_here">Enter text here</string>
    <string name="translate_to">Translate to : </string>
    <string name="select_language">Select language</string>
    <string name="channel_name">hasan.mohamed.shehata.notificationchannel</string>
    <string name="channel_description">hasan.mohamed.shehata.notificationchanneldescription</string>
    <string name="downloading_in_progress">Downloading in progress</string>
    <string name="total_length">Total length :</string>
    <string name="kilobyte">KB</string>
    <string name="downloaded_length">Downloaded length :</string>
    <string name="speed">Speed :</string>
    <string name="kbps">KBps</string>
    <string name="please_select_language">Please select languages</string>
    <string name="mbps">MB/s</string>
    <string name="mb">MB</string>
    <string name="translate">Translate</string>
    <string name="download">Download</string>
    <string name="enter_your_data">Enter your data</string>
    <string name="your_language">Your language</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="submit">Submit</string>
    <string name="menu_users">Chatters</string>
    <string name="users">People list</string>
    <string name="Chat">Chat</string>
    <string name="password">Password</string>
    <string name="retypr_password">Retype password</string>
    <string name="emailatexample">email@example.com</string>
    <string name="translation">Translation</string>
    <string name="Chatters">Chatters</string>
    <string name="calls_and_chats">Translated Call, Chat</string>
    <string name="about">About</string>
    <string name="Calling">Outcoming call</string>
    <string name="action_change_user">Change user</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="level_text">Level %1$d</string>
    <!-- -
    This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
    For more information, see https://support.google.com/admob/answer/3052638
<!- -->
    <string name="interstitial_ad_unit_id">YOUR_INTERSTITIAL_AD_UNIT_ID</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_test_test_test">TestTestTestActivity</string>
    <string name="users_list">Buddies</string>
    <string name="logout">Logout</string>
    <string name="brand_name">Huddle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Save</string>
    <string name="next">Next</string>
    <string name="my_contacts">Contacts</string>
    <string name="my_groups">My groups</string>
    <string name="calls">Calls</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
</resources>