<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="user"
            type="hasan.mohamed.shehata.myapplication.models.User" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_l">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/call_window_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_data"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/margin_m"
            app:layout_constraintEnd_toEndOf="parent"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_m"
            android:hint="@string/enter_your_name"
            android:text="@{user.username}"
            app:layout_constraintTop_toBottomOf="@id/call_window_label"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_m"
            android:hint="@string/enter_your_email"
            android:text="@{user.useremail}"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_m"
            android:text="@{user.userphone}"
            android:hint="@string/enter_your_phone_number"
            app:layout_constraintTop_toBottomOf="@id/user_email"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/your_language"
            android:layout_margin="@dimen/margin_m"
            android:text="@{user.userlanguage.name()}"
            app:layout_constraintTop_toBottomOf="@id/user_phone"
            app:layout_constraintStart_toStartOf="parent"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/select_language_but"
            android:text="@string/select"
            android:layout_margin="@dimen/margin_m"
            app:layout_constraintTop_toTopOf="@id/user_language"
            app:layout_constraintBottom_toBottomOf="@id/user_language"
            android:layout_marginStart="@dimen/margin_m"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submit_but"
            android:text="@string/submit"
            app:layout_constraintTop_toBottomOf="@id/select_language_but"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>