<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="user"
            type="hasan.mohamed.shehata.myapplication.models.User" />
    </data>
    <ScrollView
         android:layout_width="match_parent"
        android:layout_height="match_parent">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.MyApplication.FullscreenContainer"
    android:paddingTop="@dimen/padding_large"
    android:paddingBottom="@dimen/padding_very_large"
    tools:context=".ui.login.LoginFragment">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="?attr/fullscreenTextColor"
        android:textSize="50sp"
        android:visibility="gone"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">
        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_l">
            <TextView
                android:id="@+id/sign_in_up_welcome_tv"
                android:gravity="top"
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/margin_m"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/myAccent1"
                android:textStyle="bold"
                android:textSize="21sp"
                android:text="Lets get started"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sign_in_up_welcome_tv"
                android:padding="@dimen/margin_m"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/padding_large"
                android:id="@+id/sininsignup_buts_container">
                <Button
                    android:id="@+id/signup_but"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/signin_but"
                    android:layout_marginEnd="@dimen/margin_m"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:background="@drawable/signup_button_background"
                    android:text="Signup"/>

                <Button
                    android:id="@+id/signin_but"
                    android:layout_marginStart="@dimen/margin_m"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:background="@drawable/signin_button_background"
                    app:layout_constraintStart_toEndOf="@id/signup_but"
                    app:layout_constraintTop_toTopOf="parent"

                    android:text="Login"/>
            </LinearLayout>

            <ImageButton

                android:id="@+id/select_photo_but"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:background="@drawable/select_photo_button_background"
                android:src="@drawable/ic_baseline_photo_camera_100"
                android:layout_margin="@dimen/margin_l"
                app:layout_constraintTop_toBottomOf="@id/sininsignup_buts_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                android:id="@+id/call_window_label"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_data"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/margin_m"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"/>
            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_m"
                android:hint="@string/enter_your_name"
                android:text="@{user.username}"
                android:maxLines="1"
                android:lines="1"
                android:textSize="@dimen/login_fields_text_size"
                android:backgroundTint="@color/myAccent1"
                app:layout_constraintTop_toBottomOf="@id/select_photo_but"
                android:padding="@dimen/padding_large"
                />
            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_m"
                android:hint="@string/emailatexample"
                android:maxLines="1"
                android:lines="1"
                android:textSize="@dimen/login_fields_text_size"
                android:text="@{user.useremail}"
                android:backgroundTint="@color/myAccent1"
                android:padding="@dimen/padding_large"
                app:layout_constraintTop_toBottomOf="@id/user_name"
                android:inputType="textEmailAddress"
                />
            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_m"
                android:hint="@string/password"
                android:lines="1"
                android:maxLines="1"
                android:textSize="@dimen/login_fields_text_size"
                android:text="@{user.password}"
                android:backgroundTint="@color/myAccent1"
                android:padding="@dimen/padding_large"
                app:layout_constraintTop_toBottomOf="@id/user_email"
                android:inputType="textPassword"
                />
            <EditText
                android:id="@+id/retypepasswordet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginBottom="@dimen/margin_l"
                android:maxLines="1"
                android:textSize="@dimen/login_fields_text_size"
                android:lines="1"
                android:hint="@string/retypr_password"
                android:backgroundTint="@color/myAccent1"
                android:padding="@dimen/padding_large"
                app:layout_constraintTop_toBottomOf="@id/password_et"
                android:inputType="textPassword"
                />
            <EditText
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_m"
                android:text="@{user.userphone}"
                android:hint="@string/enter_your_phone_number"
                android:visibility="gone"
                android:maxLines="1"
                android:textSize="@dimen/login_fields_text_size"
                android:lines="1"
                android:background="@drawable/textboxbackground"
                android:padding="@dimen/padding_large"
                app:layout_constraintTop_toBottomOf="@id/retypepasswordet"
                />
            <TextView
                android:id="@+id/user_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/your_language"
                android:layout_margin="@dimen/margin_m"
                android:textSize="@dimen/login_fields_text_size"
                android:text="@{user.userlanguage.name()}"
                app:layout_constraintTop_toBottomOf="@id/user_phone"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/textboxbackground"
                android:padding="@dimen/padding_large"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/select_language_but"
                android:text="Select"
                android:layout_margin="@dimen/margin_m"
                app:layout_constraintTop_toTopOf="@id/user_language"
                app:layout_constraintBottom_toBottomOf="@id/user_language"
                android:layout_marginStart="@dimen/margin_m"
                android:background="@drawable/signin_signup_button_background"
                android:paddingEnd="@dimen/margin_m"
                android:paddingStart="@dimen/margin_m"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/submit_but"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:background="@drawable/signin_signup_button_background"
                android:textColor="@color/white"
                android:layout_margin="@dimen/padding_large"
                app:layout_constraintTop_toBottomOf="@id/user_language"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/userAlreadyExistsTV"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_l"
                android:text="User already exist try login!"
                android:textColor="@color/red"
                android:textSize="@dimen/login_fields_text_size"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/submit_but"
                />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="500dp"
                app:layout_constraintTop_toBottomOf="@id/userAlreadyExistsTV"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.MyApplication.ButtonBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"
                android:text="@string/dummy_button" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
    </ScrollView>
</layout>